tests/ui/stream_bodies_return_unit.stderr
error[E0308]: mismatched types
  --> tests/ui/stream_bodies_return_unit.rs:9:36
   |
 8 | /     join!(
 9 | |         _ in stream::iter([42]) => 99,
   | |                                    ^^ expected `()`, found integer
10 | |     );
   | |_____- expected `()` because of return type
